src/objects/XLR8_Suggestions__c.object
<CustomObject>
    <description>XLR8 custom object designed to aid in the coordinating and implementation of suggestions to the XLR8 CRM.</description>
    <fields>
        <fullName>Admin_Comments__c</fullName>
        <label>Admin Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implemented (Features)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved (Questions)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suggestion_Type__c</fullName>
        <inlineHelpText>Enter the general type of suggestion that you are making. Use the detailed notes section to specify the requirements of your suggestion.</inlineHelpText>
        <label>Suggestion Type</label>
        <picklist>
            <picklistValues>
                <fullName>Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Suggestion</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Suggestion_Type__c</columns>
        <columns>Subject__c</columns>
        <columns>Detail__c</columns>
        <columns>Admin_Comments__c</columns>
        <columns>Status__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S{0000}-{MM}{DD}{YYYY}</displayFormat>
        <label>Suggestion ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suggestions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Status_Changed_Only_By_Owner_or_Creator</fullName>
        <active>true</active>
        <description>Evaluates the user trying to change the subject and will not allow change if the user is neither the owner, or the creator and the owner is not the Admin.</description>
        <errorConditionFormula>AND( ISCHANGED( Status__c ), $User.Id &lt;&gt; OwnerId, $User.Id &lt;&gt; CreatedById)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Only the record Owner or the Record Creator can change the &quot;Status&quot; field.</errorMessage>
    </validationRules>
</CustomObject>